examples/fail/unterm.miniml
let id = fun f x is x 

let zero = id 0 ;; 

5 + 0 * 4 ;; 